src/LuckyDraw V1.0/src/objects/SFGA__Search_Phrase__c.object
<CustomObject>
    <description>Search Phrases are the search terms or phrases the user types into a search box</description>
    <fields>
        <fullName>SFGA__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N40000001HghFEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFGA__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N40000001HghEEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFGA__Search_Phrase_ID__c</fullName>
        <description>Unique Identifier of the Search Phrase</description>
        <label>Search Phrase ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Search Phrase</label>
    <nameField>
        <label>Search Phrase</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Phrases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>